--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap');
+
 body {
     background-color: cornflowerblue;
+}
+header{
+    text-align: center; 
+    font-family: "Walter Turncoat", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 25px;
 }
