--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body {
     background-color: cornflowerblue;
 }
-header{
+h1{
     text-align: center; 
     font-family: "Walter Turncoat", cursive;
     font-weight: 400;
