--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,15 @@ header{
     font-style: normal;
     font-size: 25px;
 }
+
+header .pfp{
+    width: 200px;
+    height: 200px;
+    border: 5px solid white;
+    border-radius: 25%;
+    background-image: url(./../img/Alices-Adventures-In-Wonderland.jpg);
+    background-repeat: no-repeat;
+    background-position: center -110px;
+    background-size: 110%;
+    margin: 0 auto;
+}
