--- a/css/style.css
+++ b/css/style.css
@@ -20,5 +20,5 @@ header .pfp{
     background-repeat: no-repeat;
     background-position: center -110px;
     background-size: 110%;
-    margin: 0 auto;
+    margin: 50px auto;
 }
