--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header{
     color: crimson;
     background-color: aliceblue;
     padding: 5px;
+    width: 100%;
 }
 
 header .pfp{
@@ -42,7 +43,7 @@ body p, ul{
 }
 
 main{
-    width: 1000px;
+    width: 50%;
     margin: 0 auto;
 }
 
