--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ header{
     color: crimson;
     background-color: aliceblue;
     padding: 5px;
-    width: 100%;
 }
 
 header .pfp{
@@ -54,4 +53,19 @@ img{
 body .caption{
     font-size: 10px;
     margin: 0 auto;
+}
+
+footer{
+    font-family: "Walter Turncoat", cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: crimson;
+    background-color: aliceblue;
+    padding: 5px;
+    text-align: center;
+    margin-top: 50px;
+}
+
+footer a:hover{
+color: crimson;
 }
