--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,18 @@ header .pfp{
     margin: 50px auto;
 }
 
+header .pfp.alice{
+    width: 200px;
+    height: 200px;
+    border: 10px solid cornflowerblue;
+    border-radius: 25%;
+    background-image: url(./../img/Alice_Profile_Image.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 110%;
+    margin: 50px auto;
+}
+
 body h2{
     font-family: "Walter Turncoat", cursive;
     font-weight: 400;
@@ -39,6 +51,18 @@ body p, ul{
     font-family: "Schoolbell", cursive;
     font-weight: 400;
     font-style: normal;
+}
+
+body p .back{
+    text-align: start;
+}
+
+a{
+    color: aliceblue;
+}
+
+a:hover{
+    color: darkred;
 }
 
 main{
@@ -66,8 +90,8 @@ footer{
     margin-top: 50px;
 }
 
-footer a:hover{
-color: crimson;
+footer a{
+    color: cornflowerblue;
 }
 
 @media (max-width: 600px) {
